added crud operations for user